--- a/templates/admin_manage.html
+++ b/templates/admin_manage.html
@@ -69,6 +69,7 @@
 </ul>
 
 <h2>Incentive Pot</h2>
+<p>Total Bonus Payout: ${{ "%.2f"|format((employees | selectattr('role', 'equalto', 'driver') | map(attribute='score') | sum * pot_info['driver_point_value']) + (employees | selectattr('role', 'equalto', 'laborer') | map(attribute='score') | sum * pot_info['laborer_point_value'])) }}</p>
 <form id="updatePotForm">
     <div class="mb-3">
         <label for="sales_dollars" class="form-label">Sales Dollars:</label>
