--- a/templates/base.html
+++ b/templates/base.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>RFID Incentive Program</title>
-    <link rel="stylesheet" href="/static/style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/static/style.css?v={{ 'now' | timestamp }}">
 </head>
 <body>
 <div class="container mt-4">
