--- a/templates/base.html
+++ b/templates/base.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>RFID Incentive Program</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/static/style.css?v={{ 'now' | timestamp }}">
+    <link rel="stylesheet" href="/static/style.css?v={{ import_time }}">
 </head>
 <body>
 <div class="container mt-4">
