Fixed supervisor_pot error, corrected update_pot_info args, ensured DB consistency

--- a/templates/incentive.html
+++ b/templates/incentive.html
@@ -65,7 +65,7 @@
                 {% endif %}
                 <td>{{ emp.role }}</td>
                 <td>{{ emp.score }}</td>
-                <td>${{ "%.2f"|format(emp.score * (pot_info['driver_point_value'] if emp.role == 'driver' else pot_info['laborer_point_value'] if emp.role == 'laborer' else pot_info.get('supervisor_point_value', 0))) }}</td>
+                <td>${{ "%.2f"|format(emp.score * (pot_info.get('driver_point_value', 0) if emp.role == 'driver' else pot_info.get('laborer_point_value', 0) if emp.role == 'laborer' else pot_info.get('supervisor_point_value', 0))) }}</td>
             </tr>
             {% endfor %}
         </tbody>
@@ -81,12 +81,12 @@
 
 <h2>Incentive Pot</h2>
 <div id="potInfo">
-    <p>Sales Dollars: ${{ "%.2f"|format(pot_info['sales_dollars']) }}</p>
-    <p>Bonus %: {{ pot_info['bonus_percent'] }}%</p>
-    <p>Total Pot: ${{ "%.2f"|format(pot_info['sales_dollars'] * pot_info['bonus_percent'] / 100) }}</p>
-    <p>Drivers ({{ pot_info['driver_percent'] }}%): ${{ "%.2f"|format(pot_info['driver_pot']) }}, Point Value: ${{ "%.2f"|format(pot_info['driver_point_value']) }}</p>
-    <p>Laborers ({{ pot_info['laborer_percent'] }}%): ${{ "%.2f"|format(pot_info['laborer_pot']) }}, Point Value: ${{ "%.2f"|format(pot_info['laborer_point_value']) }}</p>
-    <p>Supervisors ({{ pot_info['supervisor_percent'] }}%): ${{ "%.2f"|format(pot_info['supervisor_pot']) }}, Point Value: ${{ "%.2f"|format(pot_info.get('supervisor_point_value', 0)) }}</p>
+    <p>Sales Dollars: ${{ "%.2f"|format(pot_info.get('sales_dollars', 0)) }}</p>
+    <p>Bonus %: {{ pot_info.get('bonus_percent', 0) }}%</p>
+    <p>Total Pot: ${{ "%.2f"|format(pot_info.get('sales_dollars', 0) * pot_info.get('bonus_percent', 0) / 100) }}</p>
+    <p>Drivers ({{ pot_info.get('driver_percent', 0) }}%): ${{ "%.2f"|format(pot_info.get('driver_pot', 0)) }}, Point Value: ${{ "%.2f"|format(pot_info.get('driver_point_value', 0)) }}</p>
+    <p>Laborers ({{ pot_info.get('laborer_percent', 0) }}%): ${{ "%.2f"|format(pot_info.get('laborer_pot', 0)) }}, Point Value: ${{ "%.2f"|format(pot_info.get('laborer_point_value', 0)) }}</p>
+    <p>Supervisors ({{ pot_info.get('supervisor_percent', 0) }}%): ${{ "%.2f"|format(pot_info.get('supervisor_pot', 0)) }}, Point Value: ${{ "%.2f"|format(pot_info.get('supervisor_point_value', 0)) }}</p>
 </div>
 
 {% if session.admin_id %}
